--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "GaboDev",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "sass-loader": "^13.2.0",
